[package]
name = "memex"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
description = "Execute memes"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/memex"
repository = "https://github.com/mattsse/memex"
keywords = ["meme"]

#[[bin]]
#name = "cargo-memex"
#path = "src/main.rs"

[dependencies]
cargo_metadata = "0.13.1"
structopt = "0.3.21"
image = { version = "0.23.14", features = ["jpeg"] }
tempfile = "3.2.0"
num-traits = "0.2.0"
num-iter = "0.1.32"
