[package]
name = "cargo-memex"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
description = "Compile and execute rust code as memes"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/cargo-memex"
repository = "https://github.com/mattsse/cargo-memex"
keywords = ["meme"]

[dependencies]
structopt = "0.3.21"
image = { version = "0.23.14", features = ["jpeg"] }
num-traits = "0.2.0"
num-iter = "0.1.32"
anyhow = "1.0.40"
toml = "0.5.8"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = { version =  "0.11.3", features = ["blocking"] }
